2003-09-29  Chris Toshok  <toshok@ximian.com>

	* gui/search/e-addressbook-search-dialog.[ch]: convert everything
	from e_addressbook_search_dialog to eab_search_dialog, and
	EAddressbookSearchDialog to EABSearchDialog.

	* gui/component/addressbook.c (search_cb):
	e_addressbook_search_dialog -> eab_search_dialog.
	(addressbook_search_activated): same.
	(addressbook_query_changed): same.

2003-09-29  Chris Toshok  <toshok@ximian.com>

	* backend/pas/pas-book.c (pas_book_respond_get_supported_fields):
	don't free the fields here - the backends hold onto them.
	(pas_book_respond_get_supported_auth_methods): don't free the
	auth_methods here - the backends hold onto them.

	* backend/pas/pas-backend-file.c
	(pas_backend_file_get_supported_fields): fields go from 1 to
	E_CONTACT_FIELD_LAST, not 0.

2003-09-29  Chris Toshok  <toshok@ximian.com>

	* gui/component/addressbook.c: e-book-util.h -> eab-book-util.h

	* gui/component/addressbook-component.c: e-book-util.h ->
	eab-book-util.h.
	(new_item_cb): enable the contact editor portion of this.
	(user_create_new_item_cb): convert to async_load_uri api, and
	ifdef the _use_default_book crap.
	(ensure_completion_uris_exist): e_book_get_config_database ->
	eab_get_config_database.

	* gui/component/e-address-widget.h: e-book-util.h ->
	eab-book-util.h.

	* gui/component/Makefile.am (libevolution_addressbook_la_LIBADD):
	add selectnames back in, and add util/libeabutil.la.

2003-09-29  Chris Toshok  <toshok@ximian.com>

	* backend/ebook/e-contact.c: my head explodes from so many
	changes.

	* backend/ebook/e-contact.h: reorder fields such that all the
	string fields are first in the enum (and add a
	E_CONTACT_LAST_SIMPLE_STRING value, ala the old e-card-simple
	stuff.)  Also, add E_CONTACT_LOGO, WANTS_HTML, IS_LIST, and
	LIST_SHOW_ADDRESSES.  remove E_CONTACT_PHOTO_URI.

	* backend/ebook/e-vcard.c (e_vcard_remove_attribute): rename from
	e_card_remove_attribute, and add a g_assert_not_reached.